--- a/api/build.gradle
+++ b/api/build.gradle
@@ -10,7 +10,9 @@ java {
 }
 
 dependencies {
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
 
     //retrofit and moshi
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
